--- a/admin-client/src/App.css
+++ b/admin-client/src/App.css
@@ -1,3 +1,8 @@
+:root {
+    --theme-blue: #71BDBC;
+    --theme-red: #C74747;
+}
+
 .App {
   text-align: center;
 }
@@ -30,7 +35,7 @@
 
 @keyframes App-logo-spin {
     from {
-        transform: rotate(0deg);
+        transform: rotate(0deg);        
     }
     to {
         transform: rotate(360deg);
@@ -39,12 +44,12 @@
 
 .theme-blue
 {
-    background-color: #71BDBC !important;
-    border-color: #71BDBC !important;
+    background-color: var(--theme-blue) !important;
+    border-color: var(--theme-blue) !important;
 }
 
 .theme-red
 {
-    color: #C74747 !important;
-    border-color: #C74747 !important;
+    color: var(--theme-red) !important;
+    border-color: var(--theme-red) !important;
 }
