Fix visuals and authorization pages

--- a/admin-client/src/App.css
+++ b/admin-client/src/App.css
@@ -50,6 +50,6 @@
 
 .theme-red
 {
-    color: var(--theme-red) !important;
+    background-color: var(--theme-red) !important;
     border-color: var(--theme-red) !important;
 }
