--- a/admin-client/src/index.css
+++ b/admin-client/src/index.css
@@ -64,7 +64,8 @@ code {
 {
     margin-left: auto;
     margin-right: auto;
-    width: 50%
+    width: 50%;
+    min-width: 350px;
 }
 
 .token-display {
